--- a/linux/tools/codegen/Makefile
+++ b/linux/tools/codegen/Makefile
@@ -1,9 +1,8 @@
-signal_out="../../l2cap/signal_gen.go"
 cmd_out="../../hci/cmd/cmd_gen.go"
 evt_out="../../hci/evt/evt_gen.go"
 att_out="../../att/att_gen.go"
 
-targets := signal cmd evt att
+targets := cmd evt att
 
 all: ${targets}
 
